# AIEmotion

./: README.md  pyproject.toml
examples/: complex_emotion.py  conversions.py  examples.py  generate_emotion.py  high_control.py  transition_emotion.py  vector_operations.py
src/ai_emotion/: __init__.py  complex_emotion.py  conversion.py  simple_emotion.py
